feat: setup and apply spotless