@@ -1,5 +1,13 @@
 package io.kestra.plugin.core.trigger;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+
+import org.junit.jupiter.api.Test;
+
+import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.Label;
 import io.kestra.core.models.executions.Execution;
 import io.kestra.core.models.executions.ExecutionTrigger;
@@ -7,16 +15,10 @@ import io.kestra.core.models.flows.State;
 import io.kestra.core.models.property.Property;
 import io.kestra.core.models.triggers.multipleflows.MultipleConditionStorageInterface;
 import io.kestra.core.runners.RunContextFactory;
-import io.kestra.plugin.core.debug.Return;
 import io.kestra.core.utils.IdUtils;
-import io.kestra.core.junit.annotations.KestraTest;
-import jakarta.inject.Inject;
-import org.junit.jupiter.api.Test;
+import io.kestra.plugin.core.debug.Return;
 
-import java.util.Collections;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import jakarta.inject.Inject;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -40,11 +42,15 @@ class FlowTest {
                     new Label("flow-label-2", "flow-label-2")
                 )
             )
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format(Property.ofValue("test"))
-                .build()))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
@@ -52,10 +58,12 @@ class FlowTest {
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
             .state(State.of(State.Type.RUNNING, Collections.emptyList()))
-            .labels(List.of(
-                new Label("execution-label", "execution"),
-                new Label (Label.CORRELATION_ID, "correlationId")
-            ))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
@@ -63,7 +71,7 @@ class FlowTest {
             .build();
 
         Optional<Execution> evaluate = flowTrigger.evaluate(
-                multipleConditionStorage, runContextFactory.of(),
+            multipleConditionStorage, runContextFactory.of(),
             flow,
             execution
         );
@@ -89,11 +97,15 @@ class FlowTest {
                     new Label("flow-label-2", "flow-label-2")
                 )
             )
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format(Property.ofValue("test"))
-                .build()))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
@@ -102,10 +114,12 @@ class FlowTest {
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
             .state(State.of(State.Type.RUNNING, Collections.emptyList()))
-            .labels(List.of(
-                new Label("execution-label", "execution"),
-                new Label (Label.CORRELATION_ID, "correlationId")
-            ))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
@@ -113,7 +127,7 @@ class FlowTest {
             .build();
 
         Optional<Execution> evaluate = flowTrigger.evaluate(
-                multipleConditionStorage, runContextFactory.of(),
+            multipleConditionStorage, runContextFactory.of(),
             flow,
             execution
         );
@@ -133,15 +147,21 @@ class FlowTest {
             .id("flow-with-flow-trigger")
             .namespace("io.kestra.unittest")
             .revision(1)
-            .labels(List.of(
-                new Label("flow-label-1", "flow-label-1"),
-                new Label("flow-label-2", "flow-label-2")
-            ))
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format(Property.ofValue("test"))
-                .build()))
+            .labels(
+                List.of(
+                    new Label("flow-label-1", "flow-label-1"),
+                    new Label("flow-label-2", "flow-label-2")
+                )
+            )
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
@@ -149,20 +169,24 @@ class FlowTest {
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
             .state(State.of(State.Type.RUNNING, Collections.emptyList()))
-            .labels(List.of(
-                new Label("execution-label", "execution"),
-                new Label (Label.CORRELATION_ID, "correlationId")
-            ))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
             .type(Flow.class.getName())
-            .labels(List.of(
-                new Label("trigger-label-1", "trigger-label-1"),
-                new Label("trigger-label-2", "{{ 'trigger-label-2' }}"),
-                new Label("trigger-label-3", "{{ null }}"), // should return an empty string
-                new Label("trigger-label-4", "{{ foobar }}") // should fail
-            ))
+            .labels(
+                List.of(
+                    new Label("trigger-label-1", "trigger-label-1"),
+                    new Label("trigger-label-2", "{{ 'trigger-label-2' }}"),
+                    new Label("trigger-label-3", "{{ null }}"), // should return an empty string
+                    new Label("trigger-label-4", "{{ foobar }}") // should fail
+                )
+            )
             .build();
 
         Optional<Execution> evaluate = flowTrigger.evaluate(multipleConditionStorage, runContextFactory.of(), flow, execution);
