@@ -1,5 +1,14 @@
 package io.kestra.webserver.controllers.api;
 
+import java.time.Duration;
+import java.time.ZonedDateTime;
+import java.util.Collections;
+import java.util.List;
+import java.util.concurrent.TimeoutException;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+
 import io.kestra.core.junit.annotations.KestraTest;
 import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.GenericFlow;
@@ -17,6 +26,7 @@ import io.kestra.plugin.core.trigger.Schedule;
 import io.kestra.webserver.controllers.api.TriggerController.SetDisabledRequest;
 import io.kestra.webserver.responses.BulkResponse;
 import io.kestra.webserver.responses.PagedResults;
+
 import io.micronaut.core.type.Argument;
 import io.micronaut.http.HttpRequest;
 import io.micronaut.http.HttpResponse;
@@ -25,14 +35,6 @@ import io.micronaut.http.client.annotation.Client;
 import io.micronaut.http.client.exceptions.HttpClientResponseException;
 import io.micronaut.reactor.http.client.ReactorHttpClient;
 import jakarta.inject.Inject;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-
-import java.time.Duration;
-import java.time.ZonedDateTime;
-import java.util.Collections;
-import java.util.List;
-import java.util.concurrent.TimeoutException;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.groups.Tuple.tuple;
@@ -84,8 +86,10 @@ class TriggerControllerTest {
         jdbcTriggerRepository.save(trigger.toBuilder().triggerId("trigger-nextexec-polling").build());
 
         PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(
-            HttpRequest.GET(TRIGGER_PATH
-                + "/search?filters[q][EQUALS]=schedule-trigger-search&filters[namespace][STARTS_WITH]=io.kestra.tests&sort=triggerId:asc"),
+            HttpRequest.GET(
+                TRIGGER_PATH
+                    + "/search?filters[q][EQUALS]=schedule-trigger-search&filters[namespace][STARTS_WITH]=io.kestra.tests&sort=triggerId:asc"
+            ),
             Argument.of(PagedResults.class, TriggerController.Triggers.class)
         );
         assertThat(triggers.getTotal()).isGreaterThanOrEqualTo(2L);
@@ -101,8 +105,10 @@ class TriggerControllerTest {
                 tuple("trigger-nextexec-polling", triggerNamespace, triggerFlowId)
             );
         PagedResults<TriggerController.Triggers> triggers_oldParameters = client.toBlocking().retrieve(
-            HttpRequest.GET(TRIGGER_PATH
-                + "/search?q=schedule-trigger-search&namespace=io.kestra.tests&sort=triggerId:asc"),
+            HttpRequest.GET(
+                TRIGGER_PATH
+                    + "/search?q=schedule-trigger-search&namespace=io.kestra.tests&sort=triggerId:asc"
+            ),
             Argument.of(PagedResults.class, TriggerController.Triggers.class)
         );
         assertThat(triggers_oldParameters.getTotal()).isGreaterThanOrEqualTo(2L);
@@ -131,11 +137,15 @@ class TriggerControllerTest {
 
         jdbcTriggerRepository.save(trigger);
 
-        trigger = client.toBlocking().retrieve(HttpRequest.POST((TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
-            trigger.getNamespace(),
-            trigger.getFlowId(),
-            trigger.getTriggerId()
-        ), null), Trigger.class);
+        trigger = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                (TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
+                    trigger.getNamespace(),
+                    trigger.getFlowId(),
+                    trigger.getTriggerId()
+                ), null
+            ), Trigger.class
+        );
 
         assertThat(trigger.getExecutionId()).isNull();
         assertThat(trigger.getEvaluateRunningDate()).isNull();
@@ -145,22 +155,31 @@ class TriggerControllerTest {
         assertThat(unlockedTrigger.getExecutionId()).isNull();
         assertThat(unlockedTrigger.getEvaluateRunningDate()).isNull();
 
-        HttpClientResponseException e = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
-                unlockedTrigger.getNamespace(),
-                unlockedTrigger.getFlowId(),
-                unlockedTrigger.getTriggerId()
-            ), null)));
+        HttpClientResponseException e = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().exchange(
+                HttpRequest.POST(
+                    (TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
+                        unlockedTrigger.getNamespace(),
+                        unlockedTrigger.getFlowId(),
+                        unlockedTrigger.getTriggerId()
+                    ), null
+                )
+            )
+        );
 
         assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.CONFLICT.getCode());
         assertThat(e.getMessage()).isEqualTo("Illegal state: Trigger is not locked");
 
-        e = assertThrows(HttpClientResponseException.class, () ->
-            client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
-                "bad.namespace",
-                "some-flow-id",
-                "some-trigger-id"
-            ), null))
+        e = assertThrows(
+            HttpClientResponseException.class, () -> client.toBlocking().exchange(
+                HttpRequest.POST(
+                    (TRIGGER_PATH + "/%s/%s/%s/unlock").formatted(
+                        "bad.namespace",
+                        "some-flow-id",
+                        "some-trigger-id"
+                    ), null
+                )
+            )
         );
 
         assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.NOT_FOUND.getCode());
@@ -213,12 +232,16 @@ class TriggerControllerTest {
 
         jdbcTriggerRepository.create(trigger);
 
-        HttpResponse<?> restarted = client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH
-            + "/io.kestra.tests.schedule/flow-with-triggers/trigger-to-restart/restart"), null));
+        HttpResponse<?> restarted = client.toBlocking().exchange(
+            HttpRequest.POST(
+                (TRIGGER_PATH
+                    + "/io.kestra.tests.schedule/flow-with-triggers/trigger-to-restart/restart"),
+                null
+            )
+        );
         assertThat(restarted.getStatus().getCode()).isEqualTo(HttpStatus.OK.getCode());
 
-        assertThrows(HttpClientResponseException.class, () -> client.toBlocking().exchange(HttpRequest.POST((
-            TRIGGER_PATH + "/notfound/notfound/notfound/restart"), null)));
+        assertThrows(HttpClientResponseException.class, () -> client.toBlocking().exchange(HttpRequest.POST((TRIGGER_PATH + "/notfound/notfound/notfound/restart"), null)));
     }
 
     @Test
@@ -243,8 +266,11 @@ class TriggerControllerTest {
 
         List<Trigger> triggers = List.of(triggerLock, triggerNotLock);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH + "/unlock/by-triggers", triggers), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/unlock/by-triggers", triggers
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(1);
     }
@@ -269,8 +295,11 @@ class TriggerControllerTest {
         jdbcTriggerRepository.save(triggerLock);
         jdbcTriggerRepository.save(triggerNotLock);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH + "/unlock/by-query?namespace=io.kestra.unittest", null), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/unlock/by-query?namespace=io.kestra.unittest", null
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(1);
     }
@@ -280,10 +309,10 @@ class TriggerControllerTest {
         String namespace = IdUtils.create();
         Flow flow1 = generateFlowWithTrigger(namespace);
         Flow flow2 = generateFlowWithTrigger(namespace);
-        
+
         jdbcFlowRepository.create(GenericFlow.of(flow1));
         jdbcFlowRepository.create(GenericFlow.of(flow2));
-        
+
         Trigger triggerDisabled = createTriggerFromFlow(flow1, true);
         Trigger triggerNotDisabled = createTriggerFromFlow(flow2, false);
 
@@ -292,30 +321,36 @@ class TriggerControllerTest {
 
         List<Trigger> triggers = List.of(triggerDisabled, triggerNotDisabled);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, false)), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, false)
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(2);
         assertThat(jdbcTriggerRepository.findLast(triggerDisabled).get().getDisabled()).isFalse();
     }
-    
+
     @Test
     void enableByQuery() {
         String namespace = IdUtils.create();
         Flow flow1 = generateFlowWithTrigger(namespace);
         Flow flow2 = generateFlowWithTrigger(namespace);
-        
+
         jdbcFlowRepository.create(GenericFlow.of(flow1));
         jdbcFlowRepository.create(GenericFlow.of(flow2));
-        
+
         Trigger triggerDisabled = createTriggerFromFlow(flow1, true);
         Trigger triggerNotDisabled = createTriggerFromFlow(flow2, false);
 
         jdbcTriggerRepository.save(triggerDisabled);
         jdbcTriggerRepository.save(triggerNotDisabled);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH + "/set-disabled/by-query?namespace=%s&disabled=false".formatted(namespace), null), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/set-disabled/by-query?namespace=%s&disabled=false".formatted(namespace), null
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(2);
         assertThat(jdbcTriggerRepository.findLast(triggerDisabled).get().getDisabled()).isFalse();
@@ -326,20 +361,23 @@ class TriggerControllerTest {
         String namespace = IdUtils.create();
         Flow flow1 = generateFlowWithTrigger(namespace);
         Flow flow2 = generateFlowWithTrigger(namespace);
-        
+
         jdbcFlowRepository.create(GenericFlow.of(flow1));
         jdbcFlowRepository.create(GenericFlow.of(flow2));
-        
+
         Trigger triggerDisabled = createTriggerFromFlow(flow1, true);
         Trigger triggerNotDisabled = createTriggerFromFlow(flow2, false);
-        
+
         jdbcTriggerRepository.save(triggerDisabled);
         jdbcTriggerRepository.save(triggerNotDisabled);
 
         List<Trigger> triggers = List.of(triggerDisabled, triggerNotDisabled);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, true)), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/set-disabled/by-triggers", new TriggerController.SetDisabledRequest(triggers, true)
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(2);
         assertThat(jdbcTriggerRepository.findLast(triggerNotDisabled).get().getDisabled()).isTrue();
@@ -348,10 +386,13 @@ class TriggerControllerTest {
     @Test
     void disableByTriggersBadRequest() {
         HttpClientResponseException e = assertThrows(
-            HttpClientResponseException.class, () -> client.toBlocking().retrieve(HttpRequest.POST(
-                    TRIGGER_PATH + "/set-disabled/by-triggers", new SetDisabledRequest(null, null)),
-                BulkResponse.class));
-
+            HttpClientResponseException.class, () -> client.toBlocking().retrieve(
+                HttpRequest.POST(
+                    TRIGGER_PATH + "/set-disabled/by-triggers", new SetDisabledRequest(null, null)
+                ),
+                BulkResponse.class
+            )
+        );
 
         assertThat(e.getStatus().getCode()).isEqualTo(HttpStatus.UNPROCESSABLE_ENTITY.getCode());
     }
@@ -361,18 +402,21 @@ class TriggerControllerTest {
         String namespace = IdUtils.create();
         Flow flow1 = generateFlowWithTrigger(namespace);
         Flow flow2 = generateFlowWithTrigger(namespace);
-        
+
         jdbcFlowRepository.create(GenericFlow.of(flow1));
         jdbcFlowRepository.create(GenericFlow.of(flow2));
-        
+
         Trigger triggerDisabled = createTriggerFromFlow(flow1, true);
         Trigger triggerNotDisabled = createTriggerFromFlow(flow2, false);
 
         jdbcTriggerRepository.save(triggerDisabled);
         jdbcTriggerRepository.save(triggerNotDisabled);
 
-        BulkResponse bulkResponse = client.toBlocking().retrieve(HttpRequest.POST(
-            TRIGGER_PATH + "/set-disabled/by-query?namespace=%s&disabled=true".formatted(namespace), null), BulkResponse.class);
+        BulkResponse bulkResponse = client.toBlocking().retrieve(
+            HttpRequest.POST(
+                TRIGGER_PATH + "/set-disabled/by-query?namespace=%s&disabled=true".formatted(namespace), null
+            ), BulkResponse.class
+        );
 
         assertThat(bulkResponse.getCount()).isEqualTo(2);
         assertThat(jdbcTriggerRepository.findLast(triggerNotDisabled).get().getDisabled()).isTrue();
@@ -383,13 +427,19 @@ class TriggerControllerTest {
         Flow flow = generateFlow("flow-with-triggers");
         jdbcFlowRepository.create(GenericFlow.of(flow));
         Await.until(
-            () -> client.toBlocking().retrieve(HttpRequest.GET(
-                TRIGGER_PATH + "/search?filters[q][EQUALS]=trigger-nextexec"), Argument.of(PagedResults.class, Trigger.class)).getTotal() >= 2,
+            () -> client.toBlocking().retrieve(
+                HttpRequest.GET(
+                    TRIGGER_PATH + "/search?filters[q][EQUALS]=trigger-nextexec"
+                ), Argument.of(PagedResults.class, Trigger.class)
+            ).getTotal() >= 2,
             Duration.ofMillis(100),
             Duration.ofSeconds(20)
         );
-        PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(HttpRequest.GET(
-            TRIGGER_PATH + "/search?filters[q][EQUALS]=trigger-nextexec"), Argument.of(PagedResults.class, TriggerController.Triggers.class));
+        PagedResults<TriggerController.Triggers> triggers = client.toBlocking().retrieve(
+            HttpRequest.GET(
+                TRIGGER_PATH + "/search?filters[q][EQUALS]=trigger-nextexec"
+            ), Argument.of(PagedResults.class, TriggerController.Triggers.class)
+        );
         assertThat(triggers.getResults().getFirst().getTriggerContext().getNextExecutionDate()).isNotNull();
         assertThat(triggers.getResults().get(1).getTriggerContext().getNextExecutionDate()).isNotNull();
     }
@@ -399,45 +449,57 @@ class TriggerControllerTest {
             .id(flowId)
             .namespace("io.kestra.tests.schedule")
             .tenantId(TENANT_ID)
-            .tasks(Collections.singletonList(Return.builder()
-                .id("task")
-                .type(Return.class.getName())
-                .format(Property.ofValue("return data"))
-                .build()))
-            .triggers(List.of(
-                Schedule.builder()
-                    .id("trigger-nextexec-schedule")
-                    .type(Schedule.class.getName())
-                    .cron("*/1 * * * *")
-                    .build(),
-                PollingTrigger.builder()
-                    .id("trigger-nextexec-polling")
-                    .type(PollingTrigger.class.getName())
-                    .build()
-            ))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("task")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("return data"))
+                        .build()
+                )
+            )
+            .triggers(
+                List.of(
+                    Schedule.builder()
+                        .id("trigger-nextexec-schedule")
+                        .type(Schedule.class.getName())
+                        .cron("*/1 * * * *")
+                        .build(),
+                    PollingTrigger.builder()
+                        .id("trigger-nextexec-polling")
+                        .type(PollingTrigger.class.getName())
+                        .build()
+                )
+            )
             .build();
     }
-    
+
     private Flow generateFlowWithTrigger(String namespace) {
         return Flow.builder()
             .id(IdUtils.create())
             .tenantId(TENANT_ID)
             .namespace(namespace)
-            .tasks(Collections.singletonList(Return.builder()
-                .id("task")
-                .type(Return.class.getName())
-                .format(Property.ofValue("return data"))
-                .build()))
-            .triggers(List.of(Schedule.builder()
-                .id(IdUtils.create())
-                .type(Schedule.class.getName())
-                .cron("*/1 * * * *")
-                .build()
-            ))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("task")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("return data"))
+                        .build()
+                )
+            )
+            .triggers(
+                List.of(
+                    Schedule.builder()
+                        .id(IdUtils.create())
+                        .type(Schedule.class.getName())
+                        .cron("*/1 * * * *")
+                        .build()
+                )
+            )
             .build();
     }
-    
-    
+
     private static Trigger createTriggerFromFlow(Flow flow1, Boolean disabled) {
         return Trigger.builder()
             .flowId(flow1.getId())
